feat: Update project dependencies and configuration
This commit updates the project's dependencies to their latest stable versions, improving performance and compatibility. It also includes configuration changes to the `index.html` for a more descriptive title, initial dark mode setup, and refined Tailwind CSS configuration. The build script in `package.json` is also updated to include TypeScript compilation.

Additionally, new fields (`isFanFavorite`, `isHindiDub`, `isTrendingNo1`) have been added to the `Anime` type definition for better categorization and display of anime content. The `AnimeCard` component is enhanced with an optional `link` and `subtitle` prop for more flexible rendering.

The `HeroSlider` component now includes a "Trending #1" tag using a new `Flame` icon and a pulse animation, and the `Navbar` component has been refactored to remove theme toggling logic and introduce a language selector.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Anime India</title>
+    <title>Anime India | Stream Hindi Dubbed Anime</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -17,7 +17,7 @@
                 200: '#fed7aa',
                 300: '#fdba74',
                 400: '#fb923c',
-                500: '#f97316', // Main Orange
+                500: '#f97316', 
                 600: '#ea580c',
                 700: '#c2410c',
                 800: '#9a3412',
@@ -30,26 +30,47 @@
     </script>
     <style>
       ::-webkit-scrollbar { width: 8px; }
-      ::-webkit-scrollbar-track { background: #1e293b; }
+      ::-webkit-scrollbar-track { background: #020617; }
       ::-webkit-scrollbar-thumb { background: #f97316; border-radius: 4px; }
       ::-webkit-scrollbar-thumb:hover { background: #ea580c; }
-      body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
+      body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 0; padding: 0; }
+      
+      #root:empty {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        background: #020617;
+      }
+      #root:empty::after {
+        content: "";
+        width: 50px;
+        height: 50px;
+        border: 5px solid #1e293b;
+        border-top-color: #f97316;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+      }
+      @keyframes spin { to { transform: rotate(360deg); } }
       @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
       .animate-fadeIn { animation: fadeIn 0.4s ease-out forwards; }
     </style>
   <script type="importmap">
 {
   "imports": {
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "react-router-dom": "https://esm.sh/react-router-dom@^7.11.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
 </head>
-  <body class="bg-gray-50 dark:bg-slate-950 text-slate-900 dark:text-gray-100 transition-colors duration-300">
+  <body class="bg-slate-950 text-gray-100">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
